--- a/src/app/componentes/tarjeta-servicios/tarjeta-servicios.component.css
+++ b/src/app/componentes/tarjeta-servicios/tarjeta-servicios.component.css
@@ -62,18 +62,20 @@ font-family: 'OpenSans-Regular';
 }
 
 .titulo_servicio{
-    font-family: 'OpenSans-Regular';
+font-family: 'OpenSans-Regular';
     font-weight: 500;
-    font-size: 17px;
+    font-size: 15px;
     margin-top: 0px;
     margin-bottom: 13px;
     position: absolute;
     background-color: #1fc6d7;
-    width: 100%;
-    padding: 2px 10px 4px 10px;
+    width: auto;
+    padding: 6px 10px 8px 10px;
     color: #fff;
-    top: 0;
+    top: -11px;
     text-align: center;
+    left: -35px;
+    border-radius: 2px;
 }
 
 .base_imagen{
@@ -104,6 +106,13 @@ font-family: 'OpenSans-Regular';
 .padding_tarifas {
     padding: 0px 42px;
 }
+
+.margin_select{
+
+    margin-bottom: 10px;
+}
+
+
 
 
 
