--- a/src/app/paginas/login-cliente/login-cliente.component.html
+++ b/src/app/paginas/login-cliente/login-cliente.component.html
@@ -3,6 +3,7 @@
 <app-login-hijo [imagenHijo]="imagenFondoClientes"
                    [usuarioHijo]="usuarioCliente"
                    (clickHijo)="volverPantalla()"
+                   (datosFormulario)="datosFormulario($event)"
 ></app-login-hijo>
 
 
