--- a/src/app/paginas/login-trabajador/login-trabajador.component.html
+++ b/src/app/paginas/login-trabajador/login-trabajador.component.html
@@ -2,7 +2,9 @@
 <app-navbar></app-navbar>
 
 
-<app-login-hijo [imagenHijo]="imagenPadre"
+<app-login-hijo    [imagenHijo]="imagenPadre"
                    [usuarioHijo]="usuarioTrabajador"
                    (clickHijo)="volverPantalla()"
+
+                   (datosFormulario)="datosTrabajador($event)"
 ></app-login-hijo>
